Change stream method in RestExceptionHandler